# SkyPro_Bank

./: .env.template  .flake8  .gitignore  README.md  generators.py  pyproject.toml
src/: decorators.py  external_API.py  file_to_py_format.py  generators.py  masks.py  processing.py  utils.py  widget.py
src/lib/: masks.py
tests/: conftest.py  test_decorators.py  test_external_API.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
