[tool.poetry]
name = "skygit"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
package-mode = false  # Полностью отключаем пакетный режим

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
mypy = "^1.16.1"
black = "^25.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"