[tool.poetry]
name = "skygit"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
package-mode = false  # Полностью отключаем пакетный режим

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
python-dotenv = "^1.1.1"
pandas = "^2.3.2"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
mypy = "^1.16.1"
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^7.4.0"
pytest-cov = "^6.2.1"
types-requests = "^2.32.4.20250809"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term --cov-report=html:coverage_report --cov-fail-under=80"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"